--- a/front-and-back-matter/_abstract.Rmd
+++ b/front-and-back-matter/_abstract.Rmd
@@ -1,5 +1,11 @@
-This *R Markdown* template is for writing an Oxford University thesis. The template is built using Yihui Xie's `bookdown` package, with heavy inspiration from Chester Ismay's `thesisdown` and the `OxThesis` \LaTeX\ template (most recently adapted by John McManigle).
+Available habitat floating in the top metere of the ocean has increased significantly with the introduction of durable anthropogenic marine debris, referred to aherin as AMD or simply "rubbish", such as plastic bottles, nylon fishing nets, and polyester clothing. As rubbish floats and transits through marine environments it can passively disperse oranisms across oceanic distances through a process called rafting. Natural debris has long served as a vector for rafting organisms, but durability, unique characteristics, and volume of anthropogenic debris may change which organisms are able to raft and where they are likely to end up. This thesis investigates the role of floating rubbish as a habitat substrate for fouling and motile species in the topmost layer of the ocean and how its passive transport may facilitate range expansion of associated species in the context of both global climate change and marine biosecurity.
 
-This template's sample content include illustrations of how to write a thesis in R Markdown, and largely follows the structure from [this R Markdown workshop](https://ulyngs.github.io/rmarkdown-workshop-2019/).
+A comprehensive synthetic review of published scientific literature documenting marine organisms associated with AMD supports the first and second chapters of this thesis. The third chapter is based on an observational study of the fouling community on rubbish immersed in Hillary's Boat Harbour in the Perth Metropolitan region of Western Australia from November 2020 through January 2021 and exposed to simulated beach weathering conditions immediately after removal from the harbour through to February 2021. These three chapters informed the creation of an agent-based model of rubbish vectors, loss, and accumulation patterns with the incorporation of biological interactions which may influence them.
 
-Congratulations for taking a step further into the lands of open, reproducible science by writing your thesis using a tool that allows you to transparently include tables and dynamically generated plots directly from the underlying data. Hip hooray!
+Chapters based on the synthetic review found. cont.
+
+The observational study found. cont.
+
+Incorporating these findings and other parameters sourced from relevant external scientific studies into an agent-based model found. cont.
+
+These findings were summarised in the final chapter in a format targeted at marine biosecurity practitioners such as regulators, resource managers, and those professionally invested in the protection of marine environments. Technical audiences may benefit from this chapter as they develop and implement policy in light of the increased prevalence of invasive species on AMD and described pathways, sinks, and decomposition patterns of fouling organisms in the beach environment where they are more likely to be discovered.
