--- a/00-intro.Rmd
+++ b/00-intro.Rmd
@@ -1,7 +1,7 @@
 ---
-#########################################
-# options for knitting a single chapter #
-#########################################
+###############################
+# single chapter knit options #
+###############################
 output:
   bookdown::pdf_document2:
     template: templates/brief_template.tex
@@ -9,36 +9,128 @@ output:
   bookdown::html_document2: default
   bookdown::word_document2: default
 documentclass: book
-#bibliography: [bibliography/references.bib, bibliography/additional-references.bib]
+bibliography: [bibliography/references.bib]
+params:
+  width: 70%
 ---
 
-# Introduction {.unnumbered}
+# Anthropogenic marine debris as habitat and pathway for range shifts and the introduction of invasive species
+\chaptermark{AMD as habitat and pathway}
 
-```{=tex}
-\adjustmtc
-\markboth{Introduction}{}
-```
-<!-- For PDF output, include these two LaTeX commands after unnumbered chapter headings, otherwise the mini table of contents and the running header will show the previous chapter -->
+> "You can see the old cities, still everywhere, the bones and bricks go to dust, but the little pieces of plastic never do. They never adapt either."
 
-Welcome to `oxforddown` [@lyngsOxforddown2019], a thesis template for R Markdown that I created when writing [my own PhD thesis](https://ulyngs.github.io/phd-thesis/) at the University of Oxford.
-This template allows you to write in R Markdown, while formatting the PDF output with the beautiful and time-tested [OxThesis LaTeX template](https://github.com/mcmanigle/OxThesis).
-The sample content is partly adapted from [`thesisdown`](https://github.com/ismayc/thesisdown) .
+`r tufte::quotefooter(' -- Ursula LeGuin, The Dispossessed')`
 
-Hopefully, writing your thesis in R Markdown will provide a nicer interface to the OxThesis template if you haven't used TeX or LaTeX before.
-More importantly, *R Markdown* allows you to embed chunks of code within your thesis and generate plots and tables directly from the underlying data, avoiding copy-paste steps.
-This gets you into the habit of doing reproducible research, which will benefit you long-term as a researcher, and also help anyone that is trying to reproduce or build upon your results down the road.
+## Introduction
 
-## Why use it? {.unnumbered}
+Plastic pollution is altering marine ecosystems. At the ocean's surface, plastic and other materials manufactured by humans represent a large and growing proportion of floating material [@Koelmans2017] that can be used by plants, animals, and other organisms in ways that may fundamentally alter how they live. These organisms, known as neuston, are adapted to life within the dynamic boundary layer of water and air and the unique challenges it presents to their physiology. Neuston survive an environment with extreme fluctuations of temperature, salinity, and nutrient availability. The addition of anthropogenic marine debris (AMD) to this unique environment presents a significant shift in the availability of solid substrate, a previously limiting resource, and may therefore initiate shifts in both how it functions and interacts with the rest of the ocean.
 
-*R Markdown* creates a simple and straightforward way to interface with the beauty of LaTeX.
-Packages have been written in **R** to work directly with LaTeX to produce nicely formatting tables and paragraphs.
-In addition to creating a user friendly interface to LaTeX, *R Markdown* allows you to read in your data, analyze it and to visualize it using **R**, **Python** or other languages, and provide documentation and commentary on the results of your project.\
-Further, it allows for results of code output to be passed inline to the commentary of your results.
-You'll see more on this later, focusing on **R**. If you are more into **Python** or something else, you can still use *R Markdown* - see ['Other language engines'](https://bookdown.org/yihui/rmarkdown/language-engines.html) in Yihui Xie's [*R Markdown: The Definitive Guide*](https://bookdown.org/yihui/rmarkdown/language-engines.html).
+## Characteristics of anthropogenic marine debris
 
-Using LaTeX together with *Markdown* is more consistent than the output of a word processor, much less prone to corruption or crashing, and the resulting file is smaller than a Word file. 
-While you may never have had problems using Word in the past, your thesis is likely going to be about twice as large and complex as anything you've written before, taxing Word's capabilities.
+Text.
 
-## Who should use it? {-}
-Anyone who needs to use data analysis, math, tables, a lot of figures, complex cross-references, or who just cares about reproducibility in research can benefit from using *R Markdown*. 
-If you are working in 'softer' fields, the user-friendly nature of the *Markdown* syntax and its ability to keep track of and easily include figures, automatically generate a table of contents, index, references, table of figures, etc. should still make it of great benefit to your thesis project.
+### Anthropogenic marine debris is a growing pollutant
+
+Text.
+
+### Sources and sinks
+
+Text.
+
+### Types and categorisation methods
+
+Text.
+
+### Scope of impacts on human and natural systems
+
+Text.
+
+## Anthropogenic marine debris as habitat
+
+Text.
+
+### A brief history of man’s battle with fouling
+
+Text.
+
+### A material comparison of anthropogenic and natural debris
+
+Text.
+
+### Successional patterns on AMD
+
+Text.
+
+### AMD as habitat for motile organisms
+
+Text.
+
+### Habitat connectivity in the epipelagic
+
+Text.
+
+## Rafting aboard anthropogenic marine debris
+
+Text.
+
+### Natural history and biogeography
+
+Text.
+
+### Mechanisms of rafting
+
+Text.
+
+### Comparing AMD and natural debris as rafting substrate
+
+Text.
+
+### Rafting in the age of climate change
+
+Text.
+
+### Japanese Tsunami Debris
+
+Text.
+
+## Marine biosecurity history and practice
+
+Text.
+
+### Classifying species by location and harm
+
+Text.
+
+### Natural and human-mediated range expansions
+
+Text.
+
+### Recognising risk and harm
+
+Text.
+
+### Prevention and response efforts
+
+Text.
+
+### Contemporary views on AMD as a biosecurity pathway
+
+Text.
+
+## Thesis overview
+
+Text.
+
+### Aims and objectives
+
+Text.
+
+### Navigating the structure
+
+Text.
+
+### Key terminology
+
+Text.
+
+
