--- a/templates/template.tex
+++ b/templates/template.tex
@@ -135,7 +135,7 @@ $endfor$
 
 %%%%%%% PAGE HEADERS AND FOOTERS %%%%%%%%%
 \usepackage{fancyhdr}
-\setlength{\headheight}{15pt}
+\setlength{\headheight}{27.5pt}
 \fancyhf{} % clear the header and footers
 \pagestyle{fancy}
 \renewcommand{\chaptermark}[1]{\markboth{\thechapter. #1}{\thechapter. #1}}
@@ -247,6 +247,15 @@ $endif$
 %%%%% YOUR OWN PERSONAL MACROS
 % This is a good place to dump your own LaTeX macros as they come up.
 
+% Address bug in microtype as of 12/21
+\microtypesetup{nopatch=item}
+
+% Introduce supervisors
+\supervisortext{$supervisortext$}
+
+% List of supervisors names (commas)
+\supervisornames{$supervisornames$}
+
 % To make text superscripts shortcuts
 	\renewcommand{\th}{\textsuperscript{th}} % ex: I won 4\th place
 	\newcommand{\nd}{\textsuperscript{nd}}
@@ -274,7 +283,12 @@ $endif$
 \setlength{\parskip}{2pt plus 1pt}
 
 %
-% Oxford University logo on title page
+% University logo on title page
+%
+\def\titleimg{{\includegraphics{$title-image$}}}
+
+%
+% University logo on title page
 %
 \def\crest{{\includegraphics[width=$university-logo-width$]{$university-logo$}}}
 \renewcommand{\university}{$university$}
@@ -317,12 +331,19 @@ $else$
 \maketitle
 $endif$
 
-%%%%% DEDICATION -- If you'd like one, un-comment the following.
-$if(dedication)$
-\begin{dedication}
-  $dedication$
-\end{dedication}
+%%%%% DECLARATION
+$if(declaration)$
+\begin{declaration}
+ 	$declaration$
+\end{declaration}
 $endif$
+
+%%%%% DEDICATION -- If you'd like one, un-comment the following.
+%$if(dedication)$
+%\begin{dedication}
+%  $dedication$
+%\end{dedication}
+%$endif$
 
 %%%%% ACKNOWLEDGEMENTS -- Nothing to do here except comment out if you don't want it.
 $if(acknowledgements)$
@@ -330,7 +351,6 @@ $if(acknowledgements)$
  	$acknowledgements$
 \end{acknowledgements}
 $endif$
-
 
 %%%%% ABSTRACT -- Nothing to do here except comment out if you don't want it.
 \begin{abstract}
