shift intro content to intro chapter and edits up to methods in biosec

--- a/00-intro.Rmd
+++ b/00-intro.Rmd
@@ -30,11 +30,11 @@ Plastic pollution is altering marine ecosystems. At the ocean's surface, plastic
 
 ## Characteristics of anthropogenic marine debris
 
-Text.
+These tonnes of buoyant AMD include single-use items and fishing gear, along with a mixture of other plastics, rubber, petroleum-based cloth and fibres, metal, and engineered wood products (Gönülal et al., 2016; Hong et al., 2014; Lavers et al., 2019). The majority of this material is fragments, fibres, and pellets larger than 5mm at its longest dimension, collectively known as macrodebris (Koelmans et al., 2017). Most floating anthropogenic macrodebris is resistant to structural degradation over long time-frames (O’Brine & Thompson, 2010) and may therefore be capable of traversing vast oceanic distances intact (Pearce, Jackson, & Cresswell, 2018).
 
 ### Anthropogenic marine debris is a growing pollutant
 
-Text.
+Numerous studies have shown AMD's capacity to function and their consumers in the top layer of the world’s oceans (Goldstein, Carson, & Eriksen, 2014; Hoeksema, Roos, & Cadée, 2012; McCuller & Carlton, 2018). Studies consistently find that most of this debris is composed of petroleum-based synthetic materials  (Gönülal, Öz, Güreşen, & Öztürk, 2016; Hong, Lee, Kang, Choi, & Ko, 2014; Lavers, Dicks, Dicks, & Finger, 2019; Santos, Friedrich, & Ivar do Sul, 2009). In 2018, approximately 357 Mt of these synthetics were produced globally (PlasticsEurope, 2019). Much of this production will be recycled or recaptured for energy production. However, the amount of plastic which bypasses these fates and deposits in landfills or the natural environment is projected to reach 12,000 Mt by 2050 (Geyer, Jambeck, & Law, 2017). 
 
 ### Sources and sinks
 
