citing the intro

--- a/02-biosec.Rmd
+++ b/02-biosec.Rmd
@@ -84,11 +84,11 @@ Driftwood, kelp mats, and other types of naturally occurring debris floating at 
 
 Since AMD presents a large and increasing amount [@koelmansAllNotLost2017; @lebretonEvidenceThatGreat2018] of solid surface area in the top layer of the ocean, it may also present a large and increasing amount of habitat capable of transporting associated organisms. This implication of increasing plastic production and pollution was hypothesised early on [@winstonDriftPlasticExpanding1982], as observational studies continued to find beach debris fouled frequently by species noted to be similar to those found on **Sargassum sp.** [@gregoryHazardsPersistentMarine1991] and on the beaches of extremely remote islands [@ryanAccumulationStrandedPlastic1988]. These early papers proposed that pristine coastlines, previously buffered from human impacts by sheer distance, would become vulnerable to anthropogenic disturbance and the introduction of harmful species both marine and terrestrial. 
 
-The next thirty years of research show that the scope of impacts from rafting aboard AMD is potentially far more complex and pervasive. Fouling organisms, multicellular plants and animals which grow attached to the surface of an object immersed in water, have been found on AMD in every marine region [@citekey] on beaches both remote [@citekey] and highly urbanised [@citekey]. In oceans and seas, this fouling community has been shown to attract and support diverse communities of mobile predators and grazers [@citekey]. Among these associated organisms are those with histories of causing harm when established outside of their native range [@citekey]. Even at the microbial level, AMD has been shown to carry pathogens harmful to humans [@citekey], fish [@citekey], coral [@citekey], and other organisms [@citekey]. The distances travelled by AMD and these problematic species are much further than any recorded aboard natural substrate [@citekey].
+The next thirty years of research show that the scope of impacts from rafting aboard AMD is potentially far more complex and pervasive. Fouling organisms, multicellular plants and animals which grow attached to the surface of an object immersed in water, have been found on AMD in every marine region [@kiesslingMarineLitterHabitat2015; @alvespovoaFoulingOrganismsMarine2021] on beaches both remote [@rechTravellingLightFouling2018] and highly urbanised [@mirallesAlertCallingPort2018]. In oceans and seas, this fouling community has been shown to attract and support communities of mobile predators and grazers [@tutmanFloatingMarineLitter2017; @whitneySurfaceSlicksAre2021]. Among these associated organisms are those with histories of causing harm when established outside of their native range [@mirallesAlertCallingPort2018; @shabaniAssemblageEncrustingOrganisms2019]. Even at the microbial level, AMD has been shown to carry pathogens harmful to humans and wildlife [@audrezetBiosecurityImplicationsDrifting2021; @virsekMicroplasticsVectorTransport2017]. The distances travelled by AMD and these problematic species are much further than any recorded aboard natural substrate [@simkaninExploringPotentialEstablishment2019].
 
 ### Natural versus artificial
 
-This capacity for long-distance dispersal of hitch-hikers is a distinct feature of AMD. Natural materials and their abundance at the ocean's surface are often heavily influenced by the seasons [@citekey] and can be limited in how far they travel by physical and biological degradation [@citekey]. AMD can be added to the ocean year-round [@citekey]. Products manufactured from plastics, wood, rubber, and other artificial or enhanced materials are typically far more resistant to physical degradation [@citekey] and have few organisms known to be capable of breaking them down [@citekey]. This means that AMD can arrive and persist at times and in places where natural debris is highly unlikely. 
+This abundance of material and its capacity for long-distance dispersal of hitch-hikers distinguish AMD from historical modes of oceanic rafting. Natural materials are capable of facilitating long-distance dispersal [@talaLongtermPersistenceFloating2019]. however their abundance at the ocean's surface are often tied to natural phenomena like seasons or storms [@hinojosaTemporalSpatialDistribution2011] and may be limited in how far they travel by physical and biological degradation [@rothauslerMercyWindsSeasonal2021]. Common sources of AMD [@koelmansAllNotLost2017], such as riverine and stormwater outflows, typically discharge some volume of material to the ocean year-round. Products manufactured from plastics, wood, rubber, and other artificial or enhanced materials typically have few means of natural degradation which slowly degrade the material over decades to centuries [@gewertPathwaysDegradationPlastic2015]. This means that AMD can arrive and persist at times and in places where natural debris is highly unlikely. 
 
 Direct comparisons of the organisms living on AMD with those on natural debris has also mostly disproved initial observations of similarity between the two. Cosmopolitan species like gooseneck barnacles (**Lepas sp.**) and certain cheliostome bryozoans like **Electra tenella** are common to both. The rest of the community, however, has often been shown to vary significantly [@citekey; @citekey]. Studies have shown that some invasive species and pathogenic microbes are significantly more common on AMD [@citekey], while others were found to raft only on AMD [@citekey].
 
